* more updates to 02 notebook

--- a/02_Uczenie_maszynowe_wprowadzenie.ipynb
+++ b/02_Uczenie_maszynowe_wprowadzenie.ipynb
@@ -576,9 +576,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "\n",
@@ -610,7 +612,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "**Proszę**:\n",
     "\n",
@@ -649,7 +657,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -700,7 +708,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "**Proszę**:\n",
     "\n",
@@ -717,7 +731,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -757,10 +777,95 @@
    "metadata": {
     "editable": true,
     "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Trening\n",
+    "\n",
+    "W jaki sposób znajdujemy parametry funkcji $\\mathbf{\\theta}$?\n",
+    "\n",
+    "Obliczamy wektor gradientu funkcji straty względem parametrów modelu i zmieniamy te paramatry w kierunku przeciwnym do grandientu - czyli \"w dół\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "**Uproszczony** algorytm jest następujący:\n",
+    "\n",
+    "1) inicjalizujemy parametry modelu `init_theta`\n",
+    "\n",
+    "2) wybieramy paczkę danych ze zbioru uczącego, ang. `batch`.\n",
+    "   Wartości funkcji straty i gradientu będziemy uśredniali po paczkach by usyskać większą stabilność\n",
+    "\n",
+    "4) obliczamy gradient funkcji straty **względem parametrów modelu**. W przypadku średniego błedu kwadratowego mamy:\n",
+    "<br></br>\n",
+    "$$\n",
+    "\\huge{\n",
+    "\\nabla_{\\theta} L = \\nabla_{\\theta} \\frac{1}{N} \\sum_{X} (y - f(x,\\theta))^{2} = \\\\\n",
+    "\\frac{2}{N} \\sum_{X} (y - f(x,\\theta)) \\nabla_{\\theta} f(x, \\theta)\n",
+    "}\n",
+    "$$\n",
+    "<br></br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "4) aktualizujemy wektor parametrów odejmując gradient przeskalowany przez **współczynnik uczenia** ang. learning rate\n",
+    "<br></br>\n",
+    "$$\n",
+    "\\huge{\n",
+    " \\mathbf{\\theta_{i+1}} = \\mathbf{\\theta_{i}} - \\alpha \\cdot \\nabla_{\\theta} L\n",
+    "}\n",
+    "$$\n",
+    "<br></br>\n",
+    "5) przebiegamy przez cały zbiór uczący. Jeden przebieg jest nazywany **epoką**, ang. epoch\n",
+    "\n",
+    "6) procedurę powtarzamy wielokrotnie, aż zostaną spełnione kryteria które nałożyliśmy na proces uczenia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
      "slide_type": ""
     },
     "tags": []
    },
+   "source": [
+    "W rzeczywistych zastosowaniach używamy zaawansowanych algorytmów minimalizacyjnych. \n",
+    "\n",
+    "Jednym z najbardziej popularnych algormytów jest `adaptive moment estimation` - [adam](https://arxiv.org/abs/1412.6980)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
    "source": []
   }
  ],
