* fix typos * improve layout for slide mode with rise

--- a/02_Uczenie_maszynowe_wprowadzenie.ipynb
+++ b/02_Uczenie_maszynowe_wprowadzenie.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -28,7 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-27 11:19:59.270016: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-09-28 08:28:14.553998: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -74,7 +74,6 @@
     " Uczenie maszynowe II\n",
     "</h1>\n",
     "\n",
-    "<br/><br/>\n",
     "<br/><br/>\n",
     "<br/><br/>\n",
     "<br/><br/>\n",
@@ -259,14 +258,14 @@
     "}\n",
     "$$\n",
     "Możemy więc użyć ich jako bazy. Parametry $\\theta_{i}$ to po prostu współczynniki rozwinięcia Taylora:\n",
-    "\n",
+    "<br></br>\n",
     "$$\n",
     "\\huge{\n",
     "a_{i} = \\frac{f^{(n)}(x=x_{0})}{n!}\n",
     "}\n",
     "$$\n",
     "\n",
-    "Jeśli jednak znamy współczynniki rozwinięcia nie mamy nic do zrobienia - **znamy postać funkcji $f(x)$**"
+    "Jeśli jednak znamy współczynniki rozwinięcia nie mamy nic do zrobienia - **znamy przecież postać funkcji $f(x)$**"
    ]
   },
   {
@@ -374,7 +373,7 @@
     "x[:,3:5]\n",
     "```\n",
     "\n",
-    "* klasy analizujące dane zwkle przyjmują paczki (ang. `batch`) danych. W tej sytuacji jeden przykład trzeba wyłuskać jako macierz o kształcie (1,n), a nie (n,):\n",
+    "* klasy analizujące dane zwkle przyjmują paczki (ang. batch) danych. W tej sytuacji jeden przykład trzeba wyłuskać jako macierz o kształcie (1,n), a nie (n,):\n",
     "\n",
     "```Python\n",
     "x[10:11,:]\n",
@@ -462,7 +461,7 @@
     "}\n",
     "$$\n",
     "\n",
-    "Parametry które minimalizują `RSS` można znaleźć analitycznie. W innych przypadkach musimy poszukiwać rozwiązania numerycznie.\n",
+    "Parametry które minimalizują MSE można znaleźć analitycznie. W innych przypadkach musimy poszukiwać rozwiązania numerycznie.\n",
     "\n",
     "Sprawa się komplikuje jeśli zakładamy (zwykle słusznie), że nie ma jednoznacznego deterministycznego związku między $y$ a $x$, a związek jest jedynie statystyczny.\n",
     "Najprostszy model takiego niedeterministycznego związku to obecność szumu $\\epsilon$ w $y$:\n",
@@ -548,7 +547,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "**Uwaga o notacji**:\n",
     "\n",
@@ -580,16 +585,18 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "W przypadku gdy poszukiwana funkcja nie zwraca ciągłej wartości, ale kategorię, `g` do której należy przykład opisany wektorem cech  \n",
     "$\\mathbf{x} = (x_{0}, x_{1}, ...)$, a $g$ należy do pewnego skończonego zbioru kategorii $g \\in G$ mamy do  czynienia z **klasyfikacją**.\n",
     "\n",
     "W tej sytuacji można by użyć straty `0`, `1` zależnie od tego czy `f(x)` poprawnie przypisało kategorię do zestawu cech.\n",
-    "Uzyskujemy wtedy `klasyfikator Bayesa`: \n",
+    "Uzyskujemy wtedy **klasyfikator Bayesa**: \n",
     "\n",
     "$$\n",
     "{\\huge\n",
@@ -611,13 +618,24 @@
     "tags": []
    },
    "source": [
-    "\n",
     "W rzeczywistych zastosowaniach funkcję przypisującą kategorię znajduje się w dwu krokach:\n",
     "\n",
     "1) $f(x)$ reprezentujące $p(g|x)$. Mamy tu zagadnienie analogiczne do regresji - poszukiwanie funkcji o ciągłej wartości. Nie znamy jednak prawdziwego $p(g|x)$ \n",
     " więc nie możemy użyć funkcji straty $L_{2}$. Używamy tutaj funkcji straty która prowadzi do $f(x)$ które reprezentuje rozkład \n",
     " prawdopodobieństwa zmaksymalizowany przez zbiór uczący:\n",
-    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
     " <br></br>\n",
     "$$\n",
     "{\\huge\n",
@@ -635,7 +653,7 @@
     "2) wybór właściwej klasy na podstawie oszacowania $p(g|x)$ (niekoniecznie używając kryterium Bayesa: $g: \\text{argmax}_{g} p(g|x)$)\n",
     "\n",
     "\n",
-    "Funkcja straty $L(f(x))$ nazywa się `entropią krzyżową` (ang. cross-entropy)."
+    "Funkcja straty $L(f(x))$ nazywa się **entropią krzyżową** (ang. cross-entropy)."
    ]
   },
   {
@@ -827,7 +845,8 @@
     "2) wybieramy paczkę danych ze zbioru uczącego, ang. `batch`.\n",
     "   Wartości funkcji straty i gradientu będziemy uśredniali po paczkach by usyskać większą stabilność\n",
     "\n",
-    "4) obliczamy gradient funkcji straty **względem parametrów modelu**. W przypadku średniego błedu kwadratowego mamy:\n",
+    "4) obliczamy gradient funkcji straty **względem parametrów modelu**.\n",
+    "   W przypadku średniego błędu kwadratowego mamy:\n",
     "<br></br>\n",
     "$$\n",
     "\\huge{\n",
@@ -881,9 +900,9 @@
     "[automatycznego różniczkowania](https://en.wikipedia.org/wiki/Automatic_differentiation). Operacja ta wymaga zapisania\n",
     "pośrednich kroków obliczania wartości podanej złożonej funkcji, np. funkcji straty.\n",
     "\n",
-    "Wyniki pośrednik kroków są zapisywane na \"taśmie\", ang. `tape` w czasie obliczania wartości funkcji $f(x)$.\n",
+    "Wyniki pośrednik kroków są zapisywane na \"taśmie\", ang. tape w czasie obliczania wartości funkcji $f(x)$.\n",
     "\n",
-    "* proces obliczania wartości o danych początkowych: $x$ do wyniku $f(x)$ nazywane jest przebiegiem do przodu, ang. `forward pass`\n",
+    "* proces obliczania wartości o danych początkowych: $x$ do wyniku $f(x)$ nazywane jest przebiegiem do przodu, ang. forward pass\n",
     "\n",
     "* klasa która odpowiada za zbieranie danych wymaganych do obliczania gradientu to `tf.GradientTape`:"
    ]
@@ -923,7 +942,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -947,7 +966,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -1039,17 +1058,17 @@
     "* biblioteka TensorFlow używa klasy `tf.Tensor` jako elementarnej reprezentacji macierzy:\n",
     "  <br></br>\n",
     "  ```Python\n",
-    "  x = tf.Variable(np.pi)\n",
+    "  x = tf.Variable([np.pi,np.exp(1)])\n",
     "  print(x)\n",
-    "  <tf.Variable 'Variable:0' shape=() dtype=float32, numpy=3.1415927>\n",
+    "  <tf.Variable 'Variable:0' shape=(2,) dtype=float32, numpy=array([3.1415927, 2.7182817], dtype=float32)>\n",
     "  ```\n",
     "  <br></br>\n",
     "* biblioteka Numpy używa klasy `np.array` jako elementarnej reprezentacji macierzy\n",
     "  <br></br>\n",
     "  ```Python\n",
-    "  x = np.array([np.pi])\n",
+    "  x = np.array([np.pi,np.exp(1)])\n",
     "  print(x)\n",
-    "  [3.14159265]\n",
+    "  [3.14159265 2.71828183]\n",
     "  ```"
    ]
   },
@@ -1059,7 +1078,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -1095,10 +1114,10 @@
     "[print(w.numpy(),end=\" \") for w in weights]\n",
     "print(\"\")\n",
     "\n",
-    "# number of iterations - updates of the model parameters\n",
+    "#number of iterations - updates of the model parameters\n",
     "nIterations = 5000\n",
     "\n",
-    "# learning rate\n",
+    "#learning rate\n",
     "lr = 0.01\n",
     "\n",
     "#the training loop\n",
@@ -1121,7 +1140,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -1139,7 +1158,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -1180,7 +1199,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -1191,29 +1210,35 @@
     "* narysować dane i przewidywania modelu na lewym panelu\n",
     "* narysować wartość funkcji straty w kolejnych iteracjach i ewolucję współczynnika stojącego przy $x^{2}$ na prawym panelu\n",
     "* na podstawie analizy rysunku dobrać liczbę iteracji\n",
-    "\n",
+    "* wypróbować różne wartości współczynnika uczenia\n",
+    "* wypróbować różne postacie funkcji straty z listy: [link](https://www.tensorflow.org/api_docs/python/tf/keras/losses)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
     "**Wskazówki:**\n",
     "\n",
-    "* w czasie dopracowywania kodu rysunków proszę użyć malej liczby iteracji\n",
+    "* w czasie dopracowywania kodu rysunków proszę użyć małej liczby iteracji\n",
     "* proszę użyć metody `append()` klasy list do zachowowania kolejnych wartości funkcji straty:\n",
     "  <br></br>\n",
     "```Python\n",
     "loss_history.append(loss)\n",
     "```\n",
     " <br></br>\n",
-    "* proszę wyłuskać wartość z tensora korzystając z metody `numpy()` klasy Tensor w czasie zapisywania wartości parametrów modelu:\n",
+    "* w czasie zapisywania wartości parametrów modelu proszę wyłuskać wartość z tensora korzystając z metody `tf.Tensor.numpy()`:\n",
     "   <br></br>\n",
     "```Python\n",
     "x.numpy()\n",
     "```\n",
-    " <br></br>\n",
-    "\n",
-    "**Pytanie:** czy model zbiega do wartości współczynników użytych w danych? \n",
-    "\n",
-    "**Proszę:**\n",
-    "\n",
-    "* wypróbować różne wartości współczynnika uczenia\n",
-    "* wypróbować różne postacie funkcji straty z listy: [link](https://www.tensorflow.org/api_docs/python/tf/keras/losses)"
+    "**Pytanie:** czy model zbiega do wartości współczynników użytych w danych? "
    ]
   },
   {
@@ -1222,7 +1247,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -1457,7 +1482,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
