* add literature recommendation to 01 notebook * first version of the 03 notebook

--- a/02_Uczenie_maszynowe_wprowadzenie.ipynb
+++ b/02_Uczenie_maszynowe_wprowadzenie.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -23,17 +23,11 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-09-28 08:28:14.553998: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '1'\n",
+    "\n",
     "#Color printing\n",
     "from termcolor import colored\n",
     "\n",
@@ -902,8 +896,10 @@
     "\n",
     "Wyniki pośrednik kroków są zapisywane na \"taśmie\", ang. tape w czasie obliczania wartości funkcji $f(x)$.\n",
     "\n",
-    "* proces obliczania wartości o danych początkowych: $x$ do wyniku $f(x)$ nazywane jest przebiegiem do przodu, ang. forward pass\n",
+    "* proces obliczania wartości o danych początkowych: $x$ do wyniku $f(x)$ nazywane jest przebiegiem do przodu, ang. forward pass, lub feedforward\n",
     "\n",
+    "* proces aktualizacji wag z użyciem gradientów jest nazywany jest przebiegiem wstecz, ang. backward pass lub feedbackward lub backpropagation\n",
+    "  \n",
     "* klasa która odpowiada za zbieranie danych wymaganych do obliczania gradientu to `tf.GradientTape`:"
    ]
   },
