* rename initial notebooks * develop notebook on fully connected networks

--- a/02_Podstawowe_pojecia.ipynb
+++ b/02_Podstawowe_pojecia.ipynb
@@ -1009,7 +1009,7 @@
     "tags": []
    },
    "source": [
-    "Znajdźmy teraz wartości współczynników dwumianu kwadratowego, które najlepiej opisują dane.\n",
+    "Znajdźmy teraz wartości współczynników trójmianu kwadratowego, które najlepiej opisują dane.\n",
     "Zaimplementujmy algorytm gradientu stochastycznego z użyciem automatycznego obliczania gradientu.\n",
     "\n",
     "**Dane:**\n",
