--- a/01b_Instalacja_kontenera.ipynb
+++ b/01b_Instalacja_kontenera.ipynb
@@ -12,8 +12,8 @@
    "source": [
     "# Przygotowanie środowiska -  kontener\n",
     "\n",
-    "Środowisko programistyczne: iterpreter Python i potrzebne biblioteki można instalować samodzielne na własnym komputerze.\n",
-    "dużo wygodniejszą opcją są kontenery - zestawy oprogramowania, włącznie z systemem operacyjnym, które można uruchomić na dowolnej maszynie\n",
+    "Środowisko programistyczne: iterpreter Python i potrzebne biblioteki można instalować samodzielne.\n",
+    "Dużo wygodniejszą opcją są kontenery - zestawy oprogramowania, włącznie z systemem operacyjnym, które można uruchomić na dowolnej maszynie\n",
     "i uzyskać ściśle określone środowisko pracy.\n",
     "\n",
     "1) instalacja programów do zarządzania kontenerami: [Docker](https://docs.docker.com/)\n",
@@ -21,10 +21,10 @@
     "\n",
     "**Proszę:**\n",
     "\n",
-    "* osoby z laptopami z Windows: zainstalować aplikację [Docker Desktop](https://docs.docker.com/desktop/install/windows-install/)\n",
-    "* osoby z laptopami z Linuksem: zainstalować pakiet [Docker Engine](https://docs.docker.com/engine/install/ubuntu)\n",
+    "* osoby z laptopami z Windows: o instalację aplikacji [Docker Desktop](https://docs.docker.com/desktop/install/windows-install/)\n",
+    "* osoby z laptopami z Linuksem: o instalację pakietu [Docker Engine](https://docs.docker.com/engine/install/ubuntu)\n",
     "* po instalacji proszę uruchomić testowy kontener `hello_world`\n",
-    "  (Windows - proszę otworzyć okno powłoki: `power shell`):\n",
+    "  (Windows - proszę otworzyć okno powłoki: `power shell` i pominąć komendę `sudo`):\n",
     "  ```Shell\n",
     "  sudo docker run hello-world\n",
     "  ```"
@@ -47,7 +47,9 @@
    "source": [
     "Oczekiwany wynik:\n",
     "\n",
-    "![image.png](attachment:3e2ab613-6802-47a1-bcc3-df5d6126de3f.png)"
+    "<img border=\"0\" alt=\"Kaggle\" \n",
+    "    src=\"attachment:3e2ab613-6802-47a1-bcc3-df5d6126de3f.png\" \n",
+    "    width=\"600\" height=\"600\" align=\"left\">"
    ]
   },
   {
@@ -62,7 +64,7 @@
    "source": [
     "# Kontener przygotowany na zajęcia\n",
     "\n",
-    "Do wykładu został przygotowany kontener zawierający potrzebna pakiety Python oraz server Jupyter. \n",
+    "Do wykładu został przygotowany kontener zawierający potrzebne pakiety Python oraz server Jupyter. \n",
     "\n",
     "\n",
     "**Proszę:**\n",
@@ -149,8 +151,8 @@
     "\n",
     "Dzięki temu mamy:\n",
     "\n",
-    "* zalety z używania Visual Studio - duża liczba przydatnych wtyczek\n",
-    "* zalety z używania kontenera - uniknięcie ręcznego instalowania środowiska na komputerze"
+    "* zalety z używania Visual Studio - duża liczba przydatnych wtyczek, autozupuełniania (`dumb` i `AI`)\n",
+    "* zalety z używania kontenera - uniknięcie ręcznego instalowania wymaganych pakietów"
    ]
   },
   {
@@ -159,7 +161,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
