* rename 01b_Instalacja_kontenera.ipynb to 01b_Konfiguracja_srodowiska.ipynb * add notebook for FCN * add notebook for CNN

--- a/02_Podstawowe_pojecia.ipynb
+++ b/02_Podstawowe_pojecia.ipynb
@@ -903,11 +903,11 @@
     "[automatycznego różniczkowania](https://en.wikipedia.org/wiki/Automatic_differentiation). Operacja ta wymaga zapisania\n",
     "pośrednich kroków obliczania wartości podanej złożonej funkcji, np. funkcji straty.\n",
     "\n",
-    "Wyniki pośrednik kroków są zapisywane na \"taśmie\", ang. tape w czasie obliczania wartości funkcji $f(x)$.\n",
+    "Wyniki pośrednie kroków są zapisywane na \"taśmie\", ang. tape w czasie obliczania wartości funkcji $f(x)$.\n",
     "\n",
-    "* proces obliczania wartości o danych początkowych: $x$ do wyniku $f(x)$ nazywane jest przebiegiem do przodu, ang. forward pass, lub feedforward\n",
+    "* proces obliczania wartości o danych początkowych: $x$ do wyniku $f(x)$ nazywane jest przebiegiem do przodu, ang. `forward pass`, lub feedforward\n",
     "\n",
-    "* proces aktualizacji wag z użyciem gradientów jest nazywany jest przebiegiem wstecz, ang. backward pass lub feedbackward lub backpropagation\n",
+    "* proces aktualizacji wag z użyciem gradientów jest nazywany jest przebiegiem wstecz, ang. `backward pass` lub feedbackward lub backpropagation\n",
     "  \n",
     "* klasa która odpowiada za zbieranie danych wymaganych do obliczania gradientu to `tf.GradientTape`:"
    ]
