* add some functions to emnist_functions

--- a/03_Trening_modelu.ipynb
+++ b/03_Trening_modelu.ipynb
@@ -924,8 +924,7 @@
     "tags": []
    },
    "source": [
-    "Funkcja straty w końcowym etapie treningu wykazuje duże oscylacje - **zejście gradientowe skacze wokół minimum** ponieważ współczynnik uczenia mnożący gradient  jest za duży. Zjawisko to można zredukować zmniejszając współczynnik uczenia w trakcie treningu. Algorytm zmiany `lr` zadaje się w konstruktorze\n",
-    "klasy do optymalizacji podając funckję zwracającą wartość `lr` dla danego kroku optymalizacyjnego:"
+    "Funkcja straty w końcowym etapie treningu wykazuje duże oscylacje - **zejście gradientowe skacze wokół minimum** ponieważ współczynnik uczenia mnożący gradient  jest za duży. Zjawisko to można zredukować zmniejszając współczynnik uczenia w trakcie treningu. Algorytm zmiany `lr` zadaje się w konstruktorze klasy do optymalizacji podając funckję zwracającą wartość `lr` dla danego kroku optymalizacyjnego:"
    ]
   },
   {
@@ -1157,7 +1156,7 @@
    "source": [
     "**Proszę:**\n",
     "\n",
-    "* skonfigurować funckcję `tf.keras.callbacks.EarlyStopping` tak by zatrzymała trening wcześniej."
+    "* skonfigurować funkcję `tf.keras.callbacks.EarlyStopping` tak by zatrzymała trening wcześniej."
    ]
   },
   {
