--- a/05_Sieci_w_pelni_polaczone_2.ipynb
+++ b/05_Sieci_w_pelni_polaczone_2.ipynb
@@ -702,7 +702,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "**Proszę:**\n",
     "\n",
@@ -713,7 +719,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1100,6 +1112,8 @@
     "* odkodowany komunikat wypisać na ekran w postaci napisu:\n",
     "```Python\n",
     "\n",
+    "Decoded message is: hello world\n",
+    "\n",
     "```    "
    ]
   },
@@ -1158,7 +1172,13 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1235,7 +1255,13 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1281,7 +1307,13 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1311,7 +1343,13 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1325,7 +1363,7 @@
    "source": [
     "#message decoding\n",
     "#BEGIN_SOLUTION\n",
-    "fileName = \"encoded.npz\"\n",
+    "fileName = \"data/encoded.npz\"\n",
     "with open(fileName, 'rb') as file:\n",
     "    encoded = np.load(file)\n",
     "\n",
